<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/item_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center_vertical"
    >
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="@dimen/_80sdp"
        android:layout_height="@dimen/_114sdp"
        app:cardCornerRadius="@dimen/_8sdp"
        app:cardElevation="@dimen/_6sdp"
        android:layout_margin="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBookCover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            />

    </com.google.android.material.card.MaterialCardView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayoutCompat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_weight="10"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/materialCardView"
        app:layout_constraintTop_toTopOf="parent"
      >

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBookNo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/book_no"
                android:textStyle="bold"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtBookPageCount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:text="@string/book_no"
                android:textStyle="bold"
                android:layout_weight="1"
                android:textAlignment="textEnd"
                android:textColor="@color/md_orange_900"
                />
        </androidx.appcompat.widget.LinearLayoutCompat>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtBookTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/the_lucky_caller"
            android:textColor="@color/black"
            android:textSize="@dimen/_11sdp"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_8sdp"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtBookAuther"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_1sdp"
            android:text="@string/book_auther"
            android:layout_weight="2"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txtBookDisc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"

            android:text="@string/book_discription"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_2sdp"
            />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/unsave"
        android:layout_width="@dimen/_20sdp"
        android:layout_height="@dimen/_18sdp"
        android:visibility="visible"
        android:src="@drawable/favorite"
        android:layout_marginStart="@dimen/_5sdp"
        android:layout_marginEnd="@dimen/_18sdp"
        android:layout_weight="3"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</LinearLayout>