<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MainActivity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constFirstView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/front_bg_curve"
            android:elevation="@dimen/_5sdp"
            android:paddingLeft="@dimen/_8sdp"
            android:paddingRight="@dimen/_8sdp"
           >

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_35sdp"
                android:text="@string/good_afternoon"
                android:textColor="@color/md_orange_900"
                android:textSize="@dimen/_15sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/appCompatTextView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suman_kumar"
                android:textColor="@color/black"
                android:textSize="@dimen/_22sdp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/materialCardView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_15sdp"
                app:cardBackgroundColor="#F3F3F3"
                app:cardCornerRadius="@dimen/_10sdp"
                app:cardElevation="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:padding="@dimen/_9sdp">

                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/edtSearch"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_alignParentStart="true"
                        android:layout_alignParentTop="true"
                        android:layout_marginEnd="@dimen/_30sdp"
                        android:background="@android:color/transparent"
                        android:hint="@string/search_books"
                        android:textSize="@dimen/_11sdp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <androidx.appcompat.widget.AppCompatImageView
                        android:id="@+id/imgSearch"
                        android:layout_width="@dimen/_15sdp"
                        android:layout_height="@dimen/_15sdp"
                        android:layout_alignParentTop="true"
                        android:layout_alignParentEnd="true"
                        android:src="@drawable/search"


                        android:tint="@color/dark_grey"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </androidx.constraintlayout.widget.ConstraintLayout>


            </com.google.android.material.card.MaterialCardView>


            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"

                android:orientation="horizontal"

                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.526"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/materialCardView2">

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/tabBooks"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTabBooks"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/book"
                        android:textColor="@color/md_orange_900"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/viewTabBooks"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@color/md_orange_900" />

                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:id="@+id/tabFavourite"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="center"
                    android:orientation="vertical">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/txtTabFav"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/favourite"
                        android:textColor="@color/dark_grey"
                        android:textStyle="bold" />

                    <View
                        android:id="@+id/viewTabFav"
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="2dp"
                        android:layout_marginTop="@dimen/_4sdp"
                        android:background="@color/md_orange_900"
                        android:visibility="gone" />

                </androidx.appcompat.widget.LinearLayoutCompat>

            </androidx.appcompat.widget.LinearLayoutCompat>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <FrameLayout
            android:id="@+id/fragment_container_1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />

    </androidx.appcompat.widget.LinearLayoutCompat>

</layout>